objects/Copado_License__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Enable_ADD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable ADD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_CAD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable CAD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_CCH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable CCH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_CCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable CCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_CST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable CST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Copado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Copado</label>
        <type>Checkbox</type>
    </fields>
    <label>Copado License</label>
</CustomObject>